# midterm2-sol

./: .gitignore  README.md  cabal.project  midterm2.cabal
.github/classroom/: autograding.json
src/: CallByName.hs  Trie.hs
tests/: Test.hs
